--- a/AverageTreatmentEffect.ipynb
+++ b/AverageTreatmentEffect.ipynb
@@ -126,7 +126,7 @@
    "id": "f7fe2b03",
    "metadata": {},
    "source": [
-    "Run the causal model."
+    "Configure the causal model."
    ]
   },
   {
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run causal model\n",
+    "# Configure causal model\n",
     "cm = CausalModel(Y = df['Y'].values, D = df['W'].values, X = X.values)"
    ]
   },
