--- a/AverageTreatmentEffect.ipynb
+++ b/AverageTreatmentEffect.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6087e507",
    "metadata": {},
    "source": [
     "## Average Treatment Effect on Patients' Outcome"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18b8ab78",
    "metadata": {},
    "source": [
     "Import required libraries."
@@ -19,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "021a0d8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c0b38e",
    "metadata": {},
    "source": [
     "Load the dataset and provide contextual information on column types."
@@ -43,7 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e1196d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "264b329e",
    "metadata": {},
    "source": [
     "Define the covariates and the treatment indicator and split the data into treatment and control groups"
@@ -67,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d29599c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +71,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e361ba15",
    "metadata": {},
    "source": [
     "Create the preprocessing pipeline using standard scaling of numeric columns and one-hot encoding of categorical columns."
@@ -87,7 +79,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d4fd4ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dcd522a",
    "metadata": {},
    "source": [
     "Create a dataframe X that is suitable for the \"causalinference\" package."
@@ -111,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c27161e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +112,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7fe2b03",
    "metadata": {},
    "source": [
     "Configure the causal model."
@@ -132,7 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aa190af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +129,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f60ee3d",
    "metadata": {},
    "source": [
-    "Estimate propensity score with logistic regression (Imbens & Rubin, 2015), trim the data based on propensity score (Crump, Hotz, Imbens, & Mitnik, 2009) and estimate average treatment effect (ATE) using nearest-neighbourhood matching. Confidence intervals are also provided in the results."
+    "Estimate average treatment effect (ATE) using nearest-neighbourhood matching of covariate vectors (Abadie & Imbens, 2006). Confidence intervals are also provided in the results."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e4f9ede",
    "metadata": {},
    "outputs": [
     {
@@ -163,16 +148,14 @@
       "\n",
       "                     Est.       S.e.          z      P>|z|      [95% Conf. int.]\n",
       "--------------------------------------------------------------------------------\n",
-      "           ATE      0.205      0.015     13.791      0.000      0.176      0.234\n",
-      "           ATC      0.217      0.017     12.790      0.000      0.184      0.250\n",
-      "           ATT      0.196      0.017     11.585      0.000      0.163      0.229\n",
+      "           ATE      0.194      0.014     13.456      0.000      0.166      0.222\n",
+      "           ATC      0.200      0.017     11.573      0.000      0.166      0.233\n",
+      "           ATT      0.187      0.017     10.918      0.000      0.154      0.221\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "cm.est_propensity_s()\n",
-    "cm.trim_s()\n",
     "cm.est_via_matching()\n",
     "\n",
     "print(cm.estimates)"
@@ -180,20 +163,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee97f3a",
    "metadata": {},
    "source": [
     "References:\n",
     "\n",
-    "Crump, R. K., Hotz, V. J., Imbens, G. W., & Mitnik, O. A. (2009). Dealing with limited overlap in estimation of average treatment effects. Biometrika, 96(1), 187-199. Retrieved from http://www.jstor.org/stable/27798811\n",
-    "\n",
-    "Imbens, G. W., & Rubin, D. B. (2015). Causal Inference for Statistics, Social, and Biomedical Sciences: An Introduction. Cambridge: Cambridge University Press."
+    "Abadie, A., & Imbens, G. W. (2006). Large sample properties of matching estimators for average treatment effects. Econometrica, 74(1), 235-267. doi:10.1111/j.1468-0262.2006.00655.x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebea51a1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
