--- a/BinaryClassifierExplained.ipynb
+++ b/BinaryClassifierExplained.ipynb
@@ -13,9 +13,7 @@
    "id": "18b8ab78",
    "metadata": {},
    "source": [
-    "Import or install required libraries. \n",
-    "Note that there could be incompatibilities between the scikit learn and imblearn packages that can be resolved as noted here:\n",
-    "https://github.com/scikit-learn-contrib/imbalanced-learn/issues/995"
+    "Import or install required libraries."
    ]
   },
   {
@@ -121,7 +119,7 @@
     "model = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('undersampler', RandomUnderSampler(sampling_strategy='majority')),\n",
-    "    ('classifier', GradientBoostingClassifier(n_estimators=100))\n",
+    "    ('classifier', GradientBoostingClassifier(random_state=1))\n",
     "])"
    ]
   },
